--- a/templates/base.html
+++ b/templates/base.html
@@ -13,14 +13,18 @@
     <link rel="icon" type="image/x-icon" href="{{ url_for('static', path='/images/favicon.png') }}">
 
     <!-- Links -->
-    <link rel="stylesheet" href="{{ url_for('static', path='/css/styles.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', path='/css/base.css') }}">
+
+    {% block head %}
+
+    {% endblock %}
 
     <!--  Other  -->
     <title> {{ title if title else 'Benefit Bistro' }} </title>
 </head>
 <body>
-{% block content %}
+{% block body %}
 
-{% endblock content %}
+{% endblock %}
 </body>
 </html>
