--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,21 @@
 {% extends 'base.html' %}
 
-{% block content %}
+{% block head %}
+
+<!--<link rel="stylesheet" href="{{ url_for('static', path='/css/base.css') }}">-->
+
+{% endblock %}
+
+
+{% block body %}
 Some text for test
+register -->
+<a  href="http://127.0.0.1:8090/auth/register">
+    <img src="{{ url_for('static', path='/images/reg.png') }}" alt="Иконка" width="150" height="50">
+</a>
+log in -->
+<a  href="http://127.0.0.1:8090/auth/login">
+    <img src="{{ url_for('static', path='/images/reg.png') }}" alt="Иконка" width="150" height="50">
+</a>
+
 {% endblock %}
