--- a/templates/index.html
+++ b/templates/index.html
@@ -1,20 +1,13 @@
 {% extends 'base.html' %}
 
-{% block head %}
-
-<!--<link rel="stylesheet" href="{{ url_for('static', path='/css/base.css') }}">-->
-
-{% endblock %}
-
-
 {% block body %}
 Some text for test
 register -->
-<a  href="http://127.0.0.1:8090/auth/register">
+<a  href="{{ url_for('register') }}">
     <img src="{{ url_for('static', path='/images/reg.png') }}" alt="Иконка" width="150" height="50">
 </a>
 log in -->
-<a  href="http://127.0.0.1:8090/auth/login">
+<a  href="{{ url_for('login') }}">
     <img src="{{ url_for('static', path='/images/reg.png') }}" alt="Иконка" width="150" height="50">
 </a>
 
