--- a/templates/register.html
+++ b/templates/register.html
@@ -6,7 +6,7 @@
 
 {% block body %}
 register page test
-<a  href="http://127.0.0.1:8090">
+<a  href="{{ url_for('homepage') }}">
     <img src="{{ url_for('static', path='/images/reg.png') }}" alt="Иконка" width="150" height="50">
 </a>
 {% endblock %}
