created users-repo and users-uow, made work registration

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -3,11 +3,11 @@
 {% block body %}
 Some text for test
 register -->
-<a  href="{{ url_for('register') }}">
+<a  href="{{ url_for('register_page') }}">
     <img src="{{ url_for('static', path='/images/reg.png') }}" alt="Иконка" width="150" height="50">
 </a>
 log in -->
-<a  href="{{ url_for('login') }}">
+<a  href="{{ url_for('login_page') }}">
     <img src="{{ url_for('static', path='/images/reg.png') }}" alt="Иконка" width="150" height="50">
 </a>
 
