--- a/templates/email_templates/email_base.html
+++ b/templates/email_templates/email_base.html
@@ -1,8 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Meta -->
     <meta charset="UTF-8">
-    <title>Email</title>
+    <meta name="authors" content="Khorkov Dmitriy, Fedor Guliaev, Elizaveta Guliaeva" />
+    <meta name="description" content="Benefit Bistro" />
+    <meta name="keywords" content="Benefit Bistro" />
+
+    <!-- Links -->
+    <link rel="stylesheet" href="{{ url_for('static', path='/css/base.css') }}">
+
+    {% block head %}
+
+    {% endblock %}
+
+    <!--  Other  -->
+    <title> {{ title if title else 'Benefit Bistro' }} </title>
 </head>
 <body>
     <div id="content">
